Fixed headers layout on tablet sizes

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -10,6 +10,9 @@
     padding: 0 1rem;
     position: fixed;
     z-index: 1;
+    @media only screen and (min-width: $size-medium) {
+        padding: 0 2rem;
+      }
     &__icon {
         height: 70%;
         margin: 0;
