--- a/src/components/sections/offer/offer.scss
+++ b/src/components/sections/offer/offer.scss
@@ -1,11 +1,13 @@
 @import '../../../style/abstracts/variables';
+@import '../../../style/abstracts/mixins';
 
 .offer {
-    border: 1px solid red;
+    // border: 1px solid red;
     height: 100vh;
     min-height: 50vh;
     max-height: 50rem;
     padding-top: 5.5rem;
+    position: relative;
     @media only screen and (min-height: $size-large) and (min-width: $size-medium) {
         height: 50vh;
     }
@@ -57,6 +59,17 @@
             display: inline;
             }
         }
+    }
+    &__a_square_l {
+        @include background_image;
+        top: 60%;
+        left: 3%;
+    }
+    &__a_square_r {
+        @include background_image;
+        top: 80%;
+        right: 10%;
+        width: 3rem;
     }
 }
 
