--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -18,7 +18,6 @@ a:hover {
   font-size: $big-font-size;
   font-weight: bold;
   text-transform: uppercase;
-
 }
 
 .txt_purple {
@@ -29,6 +28,9 @@ a:hover {
     line-height: 3rem;
     font-weight: 400;
     text-align: center;
+    @media only screen and (min-width: $size-medium) {
+      font-size: 1.2rem;
+    }
   }
   &--point {
     font-size: 1.1rem;
@@ -45,11 +47,16 @@ a:hover {
   text-align: center;
   &--point {
     font-size: 0.8rem;
+    @media only screen and (min-width: $size-medium) {
+      font-size: 1.2rem;
+    }
   }
   &--header {
     font-size: 1.5rem;
     font-weight: 400;
-    // margin: auto;
+    @media only screen and (min-width: $size-medium) {
+      font-size: 1.7rem;
+    }
   }
   &--thematic_scope {
     text-align: left;
@@ -61,8 +68,11 @@ a:hover {
   color: white;
   text-align: center;
   font-size: 1rem;
+  @media only screen and (min-width: $size-medium) {
+    font-size: 1.3rem;
+  }
   &--learning_plan {
-    font-size: 0.8rem
+    font-size: 0.9rem
   }
 }
 
